--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ ul, li { list-style: none; }
 img { border: none; }
 
 /******** STRUCTURE & SPECIFICS *****************/
-body { background: #fff; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #444; text-align: center; }
+body { background: #fff url(img/bg.png) repeat;  font: normal normal 400 14px/normal 'Open Sans', Helvetica, sans-serif; color: #000;  text-align: center; }
 
-.wrap { padding: 0 35px; width: 890px; background: #ccc; repeat-y; margin: 0 auto; text-align: left; }
-#header { background: #565555; height: 87px; }
-#nav { height: 29px; background: #fff url(img/menu.gif) no-repeat; }
+.wrap { padding: 0; width: 960px; margin: 0 auto; text-align: left; }
+#header { padding: 60px 0 0; }
+	h1.logo { background: url(img/logo.png) no-repeat; width: 320px; height: 119px; }
+	h1.logo a { display: block; }
+	h1.logo a span { display: none; }
+#nav { text-transform: uppercase; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; margin: 50px 0 0; width: 640px; background: rgb(255,199,115); /* Old browsers */ background: -moz-linear-gradient(top, rgba(255,199,115,1) 0%, rgba(253,157,13,1) 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,199,115,1)), color-stop(100%,rgba(253,157,13,1))); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, rgba(255,199,115,1) 0%,rgba(253,157,13,1) 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, rgba(255,199,115,1) 0%,rgba(253,157,13,1) 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top, rgba(255,199,115,1) 0%,rgba(253,157,13,1) 100%); /* IE10+ */ background: linear-gradient(to bottom, rgba(255,199,115,1) 0%,rgba(253,157,13,1) 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc773', endColorstr='#fd9d0d',GradientType=0 ); /* IE6-9 */ border-bottom: 0 none; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);  }
+	#nav li:nth-child(5) a, #nav li:nth-child(6) a { margin: 5px 0 0 10px; background: url(img/icons.png) no-repeat; display:block; width: 32px; height: 32px; padding: 0; border: 0; text-indent: -9999px; }	
+	#nav li:nth-child(1) a { border-left: 0; }
+	#nav li:nth-child(4) a { border-right: 0; }
+	#nav li:nth-child(6) a { background-position: 0 -32px;  }
 #banner { height: 335px; }
 #content { min-height: 100px; height: auto !important; height: 100px;  }
 #footer  {background: url(img/footer.gif) no-repeat; height: 160px; }
@@ -77,47 +84,18 @@ html>body .pagination { padding: 0; }
 
 /*************** Menu */
 
-.menu, .menu ul li {
-	color: #000;
-	/*background: #234;*/
-}
-
-.menu ul {
-	width: 11em;
-}
-
-.menu a {
-	text-decoration: none;
-	color: #000;
-	padding: .4em 1em;
-	display: block;
-	position: relative;
-}
-
-.menu a:hover, .menu li:hover>a {
-	color: #fc3;
-}
-
-.menu li li {	/* create borders around each item */
-	border: 1px solid #ccc;
-}
-.menu ul>li + li {	/* and remove the top border on all but first item in the list */
-	border-top: 0;
-}
-
-.menu li li:hover>ul {	/* inset 2nd+ submenus, to show off overlapping */
-	top: 5px;
-	left: 90%;
-}
-
+.menu, .menu ul li { color: #000; }
+.menu ul { width: 11em; }
+.menu a { color: #444; text-align: center; text-decoration: none; color: #000; padding: 12px; display: block; position: relative; }
+.menu ul a { background: #fd9c0a; padding: 10px 0; }
+.menu a:hover, .menu li:hover>a, .menu li.active a { color: #fff; }
+.menu li a { border-right: 1px solid #fcdbab; border-left: 1px solid #c97e10; }
+.menu li li {/* create borders around each item */ border-bottom: 1px solid #ffc46c; }
+.menu ul>li + li {	/* and remove the top border on all but first item in the list */ border-top: 0; }
+.menu li li:hover>ul {	/* inset 2nd+ submenus, to show off overlapping */ top: 5px; left: 90%; }
 /* special colouring for "Main menu:", and for "xx submenu" items in ADxMenu
 	placed here to clarify the terminology I use when referencing submenus in posts */
-.menu>li:first-child>a, .menu li + li + li li:first-child>a {
-	color: #567;
-}
-
+.menu>li:first-child>a, .menu li + li + li li:first-child>a { /* color: #567; */ }
 /* Fix for IE5/Mac \*//*/
-.menu a {
-	float: left;
-}
+.menu a { float: left; }
 /* End Fix */
