--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ body { background: #fff url(img/bg.png) repeat;  font: normal normal 14px/normal
 	.col1 { width: 320px; margin: 0 15px 0 0; }
 	.col2 { width: 595px; }
 	.col3 { width: 595px; background: #c6fb54; margin: 0 15px 15px 0; padding: 15px 15px 10px; }
-	.col2-1 { height: 270px; width: 290px; background: #c6fb54;  margin: 0 15px 0 0; }
-	.col2-1:last-child { margin: 0; height: 255px;  }
+	.col2-1 { min-height: 270px; height: auto !important; height: 270px; width: 290px; background: #c6fb54;  margin: 0 15px 0 0; }
+	.col2-1:last-child { margin: 0 0 15px;  }
 	.col3-1 { width: 260px; background: #c6fb54;  padding: 15px 15px 10px; margin: 0 0 15px; }
-	.col1 form.daftar { padding: 104px 15px 30px !important; }
 	.col1 form.login, .col1 form.daftar, .col2-1 form { padding: 15px 15px 10px; background: #c6fb54; margin: 0 0 15px; }
-	.infoAktiviti { width: 250px; background: #c6fb54; padding: 15px 20px 0; }
+		.col1 form.daftar { padding-bottom: 44px !important; }
+		.col2-1 form.stokis {  padding: 23px 15px 17px !important; }
+	.infoAktiviti { width: 250px; background: #c6fb54; padding: 15px 20px 24px; }
 	.infoAktiviti ul { font: normal 13px/22px 'Open Sans';  margin: 0 0 0 15px; }
 	.testimoni img { border: 5px solid #fff; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);  }
 	.testimoni p { padding: 0 0 0 30px; width: 460px; background: url(img/quote.png) no-repeat; display: inline-block; line-height: 23px !important; }
@@ -158,7 +159,7 @@ html>body .pagination { padding: 0; }
 /*************** Menu */
 
 .menu, .menu ul li { color: #000; }
-.menu ul { width: 11em; }
+.menu ul { width: 12em; }
 .menu a { color: #444; text-align: center; text-decoration: none; color: #000; padding: 12px 18px; display: block; position: relative; }
 .menu ul a { background: #fd9c0a; padding: 10px 0; }
 .menu a:hover, .menu li:hover>a, .menu li.active a { color: #fff; }
